--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="text/css" href="images/logo4.png">
-    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/all.css" rel="stylesheet">
     <title>Blogs | Arnav's Portfolio</title>
 </head>
 
@@ -83,7 +84,8 @@
                 <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links" target="_blank"><i
+                    class="fab fa-linkedin-in"></i></a>
             </li>
             <li class="list-item-inline ">
                 <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links" target="_blank">Instagram</a>
