--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" type="text/css" href="images/logo4.png">
-    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/all.css" rel="stylesheet">
     <title>Home | Arnav's Portfolio</title>
 </head>
 <body>
