--- a/project.html
+++ b/project.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="text/css" href="images/logo4.png">
-    <link href="/CSS/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
+    <link href="/css/all.css" rel="stylesheet">
     <title>Projects | Arnav's Portfolio</title>
 </head>
 
