--- a/project.html
+++ b/project.html
@@ -13,19 +13,17 @@
 <body>
 
     <!-- NAVIGATION BEGINS -->
-    <nav class="navigation container">
-        <div class="nav-brand">
-            <img class="image-head" src="images/mypic2.jpg" alt="My picture." width="100px" height="100px">
-        </div>
+    <nav class="navigation">
+        <div class="nav-brand">A R</div>
         <ul class="list-non-bullet nav-pills">
             <li class="list-item-inline">
-                <a href="/index.html" class="links ">Home</a>
+                <a href="/index.html" class="nav-links ">Home</a>
             </li>
             <li class="list-item-inline">
-                <a href="/project.html" class="links link-active">Projects</a>
+                <a href="/project.html" class="nav-links link-active">Projects</a>
             </li>
             <li class="list-item-inline">
-                <a href="/blog.html" class="links">Blogs</a>
+                <a href="/blog.html" class="nav-links">Blogs</a>
             </li>
         </ul>
     </nav>
@@ -33,7 +31,7 @@
     <!-- HEADER -->
     <header class="hero">
         <img src="images/project-header.svg" class="hero-image">
-        <h1 class="hero-heading">PROJECTS <span class="heading-inverted">by me</span></h1>
+        <h1 class="hero-heading">PROJECTS</h1>
     </header>
 
 
@@ -45,7 +43,8 @@
             <h2>TREK WORLD</h2>
             <small>December, 2k20</small>
             <p>
-                A React app, developed on <strong>CodeSandBox</strong>. The App suggests some top trekking trails of India of all seasons.
+                A React app, developed on <strong>CodeSandBox</strong>. The App suggests some top trekking trails of
+                India of all seasons.
             </p>
             <a class="links primary-links" href="https://je8k4.csb.app/" target="_blank">
                 Chalein Trekking!
@@ -62,13 +61,13 @@
             <h2>EMOJI INTERPRETER</h2>
             <small>December, 2k20</small>
             <p>
-                This app is an emoji interpreter, which tells the real meaning of any emoji(if in database). It is developed using ReactJs on CodeSandBox.
+                This app is an emoji interpreter, which tells the real meaning of any emoji(if in database). It is
+                developed using ReactJs on CodeSandBox.
             </p>
             <a class="links primary-links" href="https://9uyqh.csb.app/" target="_blank">
-                Let's Interpret 
+                Let's Interpret
             </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/"
-                target="_blank">
+            <a class="links secondary-links" href="https://github.com/ArnavRaaj/" target="_blank">
                 View Source Code
             </a>
         </div>
@@ -153,26 +152,42 @@
 
 
     <!-- FOOTER -->
-    <footer class="footer">
-        <div class="footer-head">I'd love to hear from you.</div>
+    <footer class="navigation footer">
+        <h1 class="footer-head" style="font-family: cursive;">I'd love to hear from you.</h1>
+        <div class="footer-div">
+            I'm currently looking for a new role and open to work in the domain of web development. I'm also open to
+            discuss ideas and doing projects together.
+        </div>
+        <br>
+        <div class="footer-div">
+            Please do feel free to reach out to me.
+        </div>
+
         <ul class="social-links">
             <li class="list-item-inline ">
-                <a href="https://github.com/ArnavRaaj" class="secondary-links links" target="_blank">GitHub</a>
+                <a href="https://github.com/ArnavRaaj" class="social github" target="_blank">
+                    <i class="fab fa-github"></i>
+                </a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="secondary-links links"
-                    target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/arnav-raj-198736192/" class="social linkedin" target="_blank">
+                    <i class="fab fa-linkedin-in"></i>
+                </a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.instagram.com/arnav.raaze/" class="secondary-links links"
-                    target="_blank">Instagram</a>
+                <a href="https://www.instagram.com/arnav.raaze/" class="social instagram" target="_blank">
+                    <i class="fab fa-instagram"></i>
+                </a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://www.facebook.com/arnav.raj.796774/" class="secondary-links links"
-                    target="_blank">facebook</a>
+                <a href="https://www.facebook.com/arnav.raj.796774/" class="social facebook" target="_blank">
+                    <i class="fab fa-facebook"></i>
+                </a>
             </li>
             <li class="list-item-inline ">
-                <a href="https://twitter.com/ArnavRa74778792" class="secondary-links links" target="_blank">Twitter</a>
+                <a href="https://twitter.com/ArnavRa74778792" class="social twitter" target="_blank">
+                    <i class="fab fa-twitter"></i>
+                </a>
             </li>
         </ul>
     </footer>
