--- a/blog.html
+++ b/blog.html
@@ -55,13 +55,14 @@
     <section class="section light-dark ">
         <div class="center-container">
             <h2>What is Trekking?</h2>
-            <small>November, 2k20</small>
+            <small>November, 2020</small>
             <p>
                 “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are climbing it.”<small> -Andy Rooney</small>
             </p>
             <p>
                 Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your destiny....
             </p>
+            <br>
             <a class="links primary-links" href="/blogContent1.html">
                 Read full blog
             </a>
