--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <p>
                 I like to showcase my work and thus, you can see my projects hosted online.
             </p>
+            <br>
             <a class="links primary-links" href="/project.html">Browse Projects</a>
         </div>
     </section>
@@ -63,7 +64,8 @@
             <p>
                 I am also working on some technical and non technical blogs. I like to document my journey of learning.
             </p>
-            <a class="links tp primary-links" href="/blog.html">Read Blogs</a>
+            <br>
+            <a class="links primary-links" href="/blog.html">Read Blogs</a>
         </div>
     </section>
 
