--- a/project.html
+++ b/project.html
@@ -46,11 +46,12 @@
                 A React app, developed on <strong>CodeSandBox</strong>. The App suggests some top trekking trails of
                 India of all seasons.
             </p>
+            <br>
             <a class="links primary-links" href="https://je8k4.csb.app/" target="_blank">
-                Chalein Trekking!
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9" target="_blank">
-                View Source Code
+                SOURCE CODE
             </a>
         </div>
     </section>
@@ -64,11 +65,13 @@
                 This app is an emoji interpreter, which tells the real meaning of any emoji(if in database). It is
                 developed using ReactJs on CodeSandBox.
             </p>
+            <br>
             <a class="links primary-links" href="https://9uyqh.csb.app/" target="_blank">
-                Let's Interpret
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/" target="_blank">
-                View Source Code
+                SOURCE CODE
+
             </a>
         </div>
     </section>
@@ -82,11 +85,13 @@
                 A CLI fun app built with <strong>Vanilla Js</strong>. Now, you can also learn GOT languages and enjoy
                 them.
             </p>
+            <br>
             <a class="links primary-links" href="https://languageworld.netlify.app/" target="_blank">
-                Enjoy the translator
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07" target="_blank">
-                View Source Code
+                SOURCE CODE
+
             </a>
         </div>
     </section>
@@ -100,12 +105,15 @@
                 A fun app, which you can use to speak in Banana language same as <strong>MINIONS</strong>. I made it
                 with HTML, CSS & Vanilla Js.
             </p>
+            <br>
+
             <a class="links primary-links" href="https://speakinminion.netlify.app/" target="_blank">
-                Let's Speak in Banana
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language"
                 target="_blank">
-                View Source Code
+                SOURCE CODE
+
             </a>
         </div>
     </section>
@@ -119,13 +127,15 @@
                 A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and play a quiz to see
                 how well know <strong>DARK.</strong>
             </p>
+            <br>
             <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js"
                 target="_blank">
-                Play Quiz
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js"
                 target="_blank">
-                View Source Code
+                SOURCE CODE
+
             </a>
         </div>
     </section>
@@ -139,13 +149,15 @@
                 A CLI app built with <strong>nodeJS</strong>. You can send this to your friends and see how they know
                 you.
             </p>
+            <br>
             <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js"
                 target="_blank">
-                Live Project
+                LIVE DEMO
             </a>
             <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js"
                 target="_blank">
-                View Source Code
+                SOURCE CODE
+
             </a>
         </div>
     </section>
