--- a/project.html
+++ b/project.html
@@ -47,12 +47,16 @@
                 India of all seasons.
             </p>
             <br>
-            <a class="links primary-links" href="https://je8k4.csb.app/" target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9" target="_blank">
-                SOURCE CODE
-            </a>
+            <ul class="list-non-bullet">
+                <li class="list-item-inline">
+                    <a href="https://je8k4.csb.app/" class="link-active links primary-links" target="_blank">LIVE DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9" target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
