--- a/project.html
+++ b/project.html
@@ -47,12 +47,13 @@
                 India of all seasons.
             </p>
             <br>
-            <ul class="list-non-bullet">
+            <ul class="list-non-bullet project-bullet">
                 <li class="list-item-inline">
-                    <a href="https://je8k4.csb.app/" class="link-active links primary-links" target="_blank">LIVE DEMO</a>
+                    <a href="https://je8k4.csb.app/" class="links primary-links" target="_blank">LIVE DEMO</a>
                 </li>
                 <li class="list-item-inline">
-                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9" target="_blank">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/trek-guide-mark9"
+                        target="_blank">
                         SOURCE CODE
                     </a>
                 </li>
@@ -70,13 +71,16 @@
                 developed using ReactJs on CodeSandBox.
             </p>
             <br>
-            <a class="links primary-links" href="https://9uyqh.csb.app/" target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/" target="_blank">
-                SOURCE CODE
-
-            </a>
+            <ul class="list-non-bullet project-bullet">
+                <li class="list-item-inline">
+                    <a href="https://9uyqh.csb.app" class="links primary-links" target="_blank">LIVE DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/" target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -90,13 +94,18 @@
                 them.
             </p>
             <br>
-            <a class="links primary-links" href="https://languageworld.netlify.app/" target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07" target="_blank">
-                SOURCE CODE
-
-            </a>
+            <ul class="list-non-bullet project-bullet">
+                <li class="list-item-inline">
+                    <a href="https://languageworld.netlify.app/" class="links primary-links" target="_blank">LIVE
+                        DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/arnav-assignment-07"
+                        target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -110,15 +119,18 @@
                 with HTML, CSS & Vanilla Js.
             </p>
             <br>
-
-            <a class="links primary-links" href="https://speakinminion.netlify.app/" target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language"
-                target="_blank">
-                SOURCE CODE
-
-            </a>
+            <ul class="list-non-bullet project-bullet">
+                <li class="list-item-inline">
+                    <a href="https://speakinminion.netlify.app/" class="links primary-links" target="_blank">LIVE
+                        DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/speakIn-banana-language"
+                        target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -132,15 +144,18 @@
                 how well know <strong>DARK.</strong>
             </p>
             <br>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js"
-                target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js"
-                target="_blank">
-                SOURCE CODE
-
-            </a>
+            <ul class="list-non-bullet project-bullet">
+                <li class="list-item-inline">
+                    <a href="https://repl.it/@ArnavRaj1/Dark-Series?embed=1&output=1#index.js" class="links primary-links" target="_blank">LIVE
+                        DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/Dark-Series/blob/master/index.js"
+                        target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -154,15 +169,18 @@
                 you.
             </p>
             <br>
-            <a class="links primary-links" href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js"
-                target="_blank">
-                LIVE DEMO
-            </a>
-            <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js"
-                target="_blank">
-                SOURCE CODE
-
-            </a>
+            <ul class="list-non-bullet project-bullet">
+                <li class="list-item-inline">
+                    <a href="https://repl.it/@ArnavRaj1/endgame?embed=1&output=1#index.js" class="links primary-links" target="_blank">LIVE
+                        DEMO</a>
+                </li>
+                <li class="list-item-inline">
+                    <a class="links secondary-links" href="https://github.com/ArnavRaaj/endgame/blob/master/index.js"
+                        target="_blank">
+                        SOURCE CODE
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
 
