--- a/blog.html
+++ b/blog.html
@@ -34,7 +34,7 @@
     </header>
 
 
-<!-- blog-2 -->
+    <!-- blog-2 -->
     <!-- <section class="section Off-white">
         <div class="center-container"> 
             <h2>DARK SERIES QUIZ</h2>
@@ -51,16 +51,18 @@
         </div>
     </section> -->
 
-<!-- blog-1 -->
+    <!-- blog-1 -->
     <section class="section light-dark ">
         <div class="center-container">
             <h2>What is Trekking?</h2>
             <small>November, 2020</small>
             <p>
-                “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are climbing it.”<small> -Andy Rooney</small>
+                “Everyone wants to live on top of the mountain, but all the happiness and growth occurs while you are
+                climbing it.”<small> -Andy Rooney</small>
             </p>
             <p>
-                Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your destiny....
+                Life is a trek & despite of your willingness, you have to keep moving forward in life to conquer your
+                destiny....
             </p>
             <br>
             <a class="links primary-links" href="/blogContent1.html">
@@ -109,6 +111,7 @@
                 </a>
             </li>
         </ul>
+        <small class="copyright">&copy; <a href="https://arnavportfolio.netlify.app/" class="copyright-link">arnavRaj</a> 2021</small>
     </footer>
 </body>
 
