--- a/project.html
+++ b/project.html
@@ -224,6 +224,7 @@
                 </a>
             </li>
         </ul>
+        <small class="copyright">&copy; <a href="https://arnavportfolio.netlify.app/" class="copyright-link">arnavRaj</a> 2021</small>
     </footer>
 </body>
 
