--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                 </a>
             </li>
         </ul>
+        <small class="copyright">&copy; <a href="https://arnavportfolio.netlify.app/" class="copyright-link">arnavRaj</a> 2021</small>
+
     </footer>
 </body>
 
